--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3",
+    "react-speech-recognition": "^1.0.7",
     "twilio-video": "^1.15.0",
     "webrtc-adapter": "^7.2.0"
   },
