--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3",
     "react-speech-recognition": "^1.0.7",
+    "rxjs": "^6.4.0",
     "twilio-video": "^1.15.0",
     "webrtc-adapter": "^7.2.0"
   },
